--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,15 +49,16 @@ jobs:
           with:
             poetry-version: 1.1.8
         # # Run the Python program
-        - name: Run Python Program
-          if: always()
-          run: |
-            cd threeXPlusOne
-            poetry install
-            poetry run threexplusone --seed 7
+        # - name: Run Python Program
+        #   if: always()
+        #   run: |
+        #     cd threeXPlusOne
+        #     poetry install
+        #     poetry run threexplusone --seed 7
         # Run GatorGrader: see config/gatorgrade.yml
         - name: Run GatorGrader with GatorGrade
           if: always()
           run:  |
-            pip install gatorgrade
+            pipx install gatorgrade
+            pipx inject gatorgrade 'click==8.1.7' --force
             gatorgrade --config config/gatorgrade.yml
